set settings message response